@@ -10,6 +10,8 @@
 - Disconnect the icon theme changed signal from a launcher when it
   is destroyed to avoid crash when the icon theme changes.
 - Fix drawing dots mode of the seperator plugin in a vertical panel (bug #5162).
+- Fix a possible crash when setting the session restart style on an
+  uninitialized client session.
 
 
 4.6.0
